# internal/controller/admin_contoller.go
@@ -25,6 +25,7 @@ func NewAdminController(adminUsecase *usecase.AdminUsecase, presenter2 *presente
 // RegisterCustomer godoc
 //
 //	@Summary		顧客の作成
+//	@Tags			Admin
 //	@Description	顧客を作成します
 //	@Produce		json
 //	@Security		Token
@@ -50,6 +51,7 @@ func (a *AdminController) RegisterCustomer(c echo.Context) error {
 // Login godoc
 //
 //	@Summary		ログイン
+//	@Tags			Admin
 //	@Description	管理者としてログインします
 //	@Accept			application/x-www-form-urlencoded
 //	@Param			email			formData	string	true	"Email"
@@ -68,6 +70,7 @@ func (a *AdminController) Login(c echo.Context) error {
 // GetCustomers godoc
 //
 //	@Summary		顧客一覧取得
+//	@Tags			Admin
 //	@Description	全顧客を一覧で取得します
 //	@Produce		json
 //	@Security		Token
@@ -81,6 +84,7 @@ func (a *AdminController) GetCustomers(c echo.Context) error {
 // GetCustomer godoc
 //
 //	@Summary		顧客取得
+//	@Tags			Admin
 //	@Description	顧客を一件取得します
 //	@Produce		json
 //	@Security		Token
@@ -100,6 +104,7 @@ func (a *AdminController) GetCustomer(c echo.Context) error {
 // GetPostsByCustomer godoc
 //
 //	@Summary		投稿取得
+//	@Tags			Admin
 //	@Description	顧客ごとの投稿データを一覧で取得します
 //	@Produce		json
 //	@Security		Token
@@ -119,6 +124,7 @@ func (a *AdminController) GetPostsByCustomer(c echo.Context) error {
 // GetAdmins godoc
 //
 //	@Summary		管理者ユーザー一覧取得
+//	@Tags			Admin
 //	@Description	管理者ユーザーを一覧で取得します
 //	@Produce		json
 //	@Security		Token
@@ -131,19 +137,16 @@ func (a *AdminController) GetAdmins(c echo.Context) error {
 
 // GetAdmin godoc
 //
-//	@Summary		管理者ユーザー一覧取得
-//	@Description	管理者ユーザーを一覧で取得します
+//	@Summary		ログイン中の管理者情報取得
+//	@Description	ログイン中の管理者情報取得します
+//	@Tags			Admin
 //	@Produce		json
 //	@Security		Token
 //	@Param			adminId		query	int	true	"Admin ID"
-//	@Router			/admin/admins/{adminId} [get]
+//	@Router			/admin/admins/i [get]
 func (a *AdminController) GetAdmin(c echo.Context) error {
 	slog.Info("GetAdmin is invoked")
-	adminIdParam := c.Param("id")
-	adminId, err := strconv.Atoi(adminIdParam)
-	if err != nil {
-		return c.String(http.StatusBadRequest, err.Error())
-	}
+	adminId := c.Get("admin_id").(int)
 	admin, err := a.adminUsecase.GetAdmin(c.Request().Context(), adminId)
 	return c.JSON(a.presenter.Generate(err, admin))
 }
@@ -152,11 +155,13 @@ func (a *AdminController) GetAdmin(c echo.Context) error {
 //
 //	@Summary		管理者ユーザーの作成
 //	@Description	管理者ユーザーを作成します
+//	@Tags			Admin
 //	@Produce		json
 //	@Security		Token
 //	@Param			name			formData	string	false	"Name"
 //	@Param			password		formData	string	false	"Password"
 //	@Param			email			formData	string	false	"Email"
+//	@Router			/admin/register/admin [post]
 func (a *AdminController) RegisterAdmin(c echo.Context) error {
 	slog.Info("RegisterAdmin is invoked")
 	var admin entity.Admin
